<resources>
    <string name="app_name">Movie Organiser</string>
    <string name="register_movie">Register Movie</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="ratings">Ratings</string>
    <string name="display_movies">Display Movies</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="save">Save</string>
    <string name="movie_title">Movie Title</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="actors_actresses">Actors/Actresses</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="register_a_movie">Register A Movie</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="favourites_title">Favourite Movies</string>
    <string name="display_guide">Select a Movie/s and press the button below to set them as your favourite movies</string>
    <string name="favourite_guide">Click the below button to save your changes if you have deselected your favourited movies</string>
    <string name="Edit_title">Edit Movies</string>
    <string name="save_fav">Save</string>
    <string name="update_btn_text">Update</string>
    <string name="favourite_status1">Favourite Status</string>
    <string name="movie_title1">Movie Title</string>
    <string name="year1">Year</string>
    <string name="director1">Director</string>
    <string name="actors_actresses1">Actors/Actresses</string>
    <string name="rating1">Rating</string>
    <string name="review1">Review</string>
    <string name="movie_data_guide">Make the necessary changes to the below data and click on the update button to save your changes</string>
    <string name="search_guide">Enter a letter or a word and press the lookup button to get results of the movie names,director name and the cast.</string>
    <string name="lookUpBtn">Lookup</string>
    <string name="lookup_results">Lookup Results:</string>
    <string name="display_title">Movie List</string>
    <string name="find_btn_text">Find movie in IMDB</string>
    <string name="register_guide">Enter the data to the given fields</string>
    <string name="movie_title2">Movie Title:</string>
    <string name="imdb_movie_rating">IMDB Movie Rating</string>
    <string name="rating2">Rating:</string>
</resources>