<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Coral"
    tools:context=".RegisterMovie">

    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRating"
        android:importantForAutofill="no"
        tools:ignore="Autofill,LabelFor,UnusedAttribute"/>

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="168dp"
        android:text="@string/movie_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="28dp"
        android:text="@string/year"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <TextView
        android:id="@+id/director_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="24dp"
        android:text="@string/director"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_textView" />

    <TextView
        android:id="@+id/actor_list_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/actors_actresses"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/director_textView" />

    <TextView
        android:id="@+id/rating_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="36dp"
        android:text="@string/rating"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actor_list_textView" />

    <TextView
        android:id="@+id/review_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="32dp"
        android:text="@string/review"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_textView" />

    <EditText
        android:id="@+id/editTextMovie"

        android:backgroundTint="@color/black"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,UnusedAttribute"/>

    <EditText
        android:id="@+id/editTextYear"
        android:backgroundTint="@color/black"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMovie"
        tools:ignore="Autofill,LabelFor,UnusedAttribute"/>

    <EditText
        android:id="@+id/editTextDirector"
        android:layout_width="144dp"
        android:backgroundTint="@color/black"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextYear"
        tools:ignore="Autofill,LabelFor,UnusedAttribute" />

    <EditText
        android:id="@+id/editTextActors"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/black"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDirector"
        tools:ignore="Autofill,LabelFor,UnusedAttribute"/>

    <EditText
        android:id="@+id/editTextRating"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextActors"
        tools:ignore="Autofill,LabelFor,UnusedAttribute"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:onClick="saveData"
        android:backgroundTint="@color/MediumSeaGreen"
        android:textColor="@color/black"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReview"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/register_a_movie"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_guide"
        android:layout_width="237dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>