<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Coral"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondRatingActivity">

    <TextView
        android:id="@+id/movieTitleTextView"
        android:layout_width="210dp"
        android:layout_height="121dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_text" />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="210dp"
        android:layout_height="121dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:backgroundTint="@color/black"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_text"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/movie_title_text"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="188dp"
        android:gravity="center_horizontal"
        android:text="@string/movie_title2"

        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imdb_title"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"

        android:text="@string/imdb_movie_rating"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating_text"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center_horizontal"
        android:text="@string/rating2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="389dp"
        android:layout_height="270dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>